tester/testsuite/good/core009.jl
// Calling functions which take zero parameters

int main() {
 int x = foo();
 printInt(x);
 return 0 ;

}

int foo() {
 return 10;
}

