tester/testsuite/bad/array06.jl
int main() {
  int x;
  for(int i : x) {
    int y = i;
  }
  return 0;
}
